GNOME Bugzilla – Bug 694000
Fix offline loading of google docs
Last modified: 2013-02-17 15:15:48 UTC
Offline loading of google docs has been broken for a while.
Created attachment 236424 [details] [review] Fix offline loading of google docs
Review of attachment 236424 [details] [review]: Looks good.
Attachment 236424 [details] pushed as 426c972 - Fix offline loading of google docs