Fix offline loading of google docs

https://bugzilla.gnome.org/show_bug.cgi?id=694000